tests/files/type_checker_tests/should_fail/073.cmdr
//Should fail in commands if using something other than string
x = 3;
echo $x;
